# kaelix

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yml
src/: command_line.rs  common.rs  config.rs  doc.rs  editor.rs  filetree.rs  main.rs  status_line.rs  terminal.rs
